Update the photo, likes, and comments

--- a/.env
+++ b/.env
@@ -4,3 +4,11 @@ NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="MYTHREADSECERET"
 
 DATABASE_URL="postgresql://postgres:root@localhost:5432/threads-next?schema=public"
+
+POSTGRES_URL="postgres://default:ZPhJaR87USli@ep-polished-recipe-55229642-pooler.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_PRISMA_URL="postgres://default:ZPhJaR87USli@ep-polished-recipe-55229642-pooler.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NON_POOLING="postgres://default:ZPhJaR87USli@ep-polished-recipe-55229642.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-polished-recipe-55229642-pooler.ap-southeast-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="ZPhJaR87USli"
+POSTGRES_DATABASE="verceldb"
